--- a/WebAppsNodeExpress/views/index.html
+++ b/WebAppsNodeExpress/views/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+
 </head>
 <body>
+    <div class = "container">
+        <div class ="jumbotron">Serving up HTML</div>
+    </div>
     
+    <script
+    src="/js/jquery-3.4.1.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+<script src="js/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
