--- a/WebAppsNodeExpress/views/index.html
+++ b/WebAppsNodeExpress/views/index.html
@@ -18,9 +18,8 @@
         <div class ="jumbotron">Serving up HTML</div>
     </div>
     
-    <script
-    src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-<script src="js/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
